@@ -4,7 +4,7 @@
     <include>fadeInOut</include>
     <controls>
         <!--background-->
-        <include>globalBackground</include>
+        <include condition="!Player.HasVideo">globalBackground</include>
         <control type="group">
             <visible>!Window.IsVisible(sliderdialog)</visible>
             <posx>col-5-begin</posx>
@@ -18,6 +18,16 @@
                 <height>2-row</height>
                 <texture>colors/white.png</texture>
                 <colordiffuse>highlight</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <control type="image">
+                <visible>player.hasvideo</visible>
+                <posx>0</posx>
+                <posy>2-row</posy>
+                <width>16-col</width>
+                <height>19-row</height>
+                <texture>colors/black.png</texture>
+                <colordiffuse>99FFFFFF</colordiffuse>
                 <aspectratio>stretch</aspectratio>
             </control>
             <control type="image">
