@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
     <defaultcontrol always="true">11</defaultcontrol>
-
     <controls>
         <control type="group">
             <posx>col-19-begin</posx>
@@ -43,24 +42,9 @@
                     <effect type="fade" start="0" end="100" delay="400" time="400" tween="sine"/>
                 </animation>
             </control>
-            <control type="label">
-                <posx>24</posx>
-                <posy>1-row</posy>
-                <width>1-col</width>
-                <height>2-row</height>
-                <aligny>center</aligny>
-                <font>dialogTitle</font>
-                <textcolor>black</textcolor>
-                <label>◀ ▶</label>
-                <shadowcolor>-</shadowcolor>
-                <!--animations-->
-                <animation type="Windowopen">
-                    <effect type="fade" start="0" end="100" delay="600" time="400" tween="sine"/>
-                </animation>
-            </control>
             <control type="label" id="12">
                 <description>message</description>
-                <posx>1-col</posx>
+                <posx>24</posx>
                 <posy>1-row</posy>
                 <font>dialogTitle</font>
                 <textcolor>black</textcolor>
