@@ -115,7 +115,7 @@
                             <posy>290</posy>
                             <width>5-col-gutter</width>
                             <height>1-row</height>
-                            <font>thumbtitle</font>
+                            <font>thumbTitle</font>
                             <textcolor>textActive</textcolor>
                             <label>[B]$INFO[ListItem.label][/B]</label>
                         </control>
@@ -124,7 +124,7 @@
                             <posy>314</posy>
                             <width>5-col-gutter</width>
                             <height>1-row</height>
-                            <font>thumbtitle</font>
+                            <font>thumbTitle</font>
                             <textcolor>textActive</textcolor>
                             <label>$INFO[ListItem.label2]</label>
                         </control>
