@@ -44,7 +44,7 @@
                                 <width>240</width>
                                 <height>1-row</height>
                                 <aligny>center</aligny>
-                                <font>thumbtitle</font>
+                                <font>thumbTitle</font>
                                 <textcolor>textActive</textcolor>
                                 <label>[B]$INFO[ListItem.label][/B]</label>
                             </control>
@@ -100,7 +100,7 @@
                                     <width>240</width>
                                     <height>1-row</height>
                                     <aligny>center</aligny>
-                                    <font>thumbtitle</font>
+                                    <font>thumbTitle</font>
                                     <textcolor>textActive</textcolor>
                                     <label>[B]$INFO[ListItem.label][/B]</label>
                                 </control>
