@@ -56,7 +56,7 @@
                         <width>240</width>
                         <height>1-row</height>
                         <aligny>center</aligny>
-                        <font>thumbtitle</font>
+                        <font>thumbTitle</font>
                         <textcolor>textActive</textcolor>
                         <label>[B]$INFO[ListItem.Title][/B]</label>
                     </control>
@@ -125,7 +125,7 @@
                             <width>240</width>
                             <height>1-row</height>
                             <aligny>center</aligny>
-                            <font>thumbtitle</font>
+                            <font>thumbTitle</font>
                             <textcolor>textActive</textcolor>
                             <label>[B]$INFO[ListItem.Title][/B]</label>
                         </control>
