@@ -68,7 +68,7 @@
                 <posy>1-row</posy>
                 <width>4-col</width>
                 <label>-</label>
-                <font>itemSubtitle</font>
+                <font>itemSubTitle</font>
                 <textcolor>textActive</textcolor>
                 <align>center</align>
                 <aligny>center</aligny>
